# moriarty-sese-seko

./: .gitignore  Cargo.toml  MANIFEST.in  README.md  VISUALIZATION_README.md  _config.yml  ai-systems.html  biomechanics.html  config.json  docs-styles.css  index.html  moriarty_showcase_report_20250610_165343.txt  pipeline.html  pipeline.md  pyproject.toml  requirements.txt  requirements_viz.txt  run_pipeline.sh  run_showcase.py  setup.bat  setup.py  setup.sh  showcase_moriarty.py  visualize_results.py
.claude/: settings.local.json
.github/workflows/: deploy-pages.yml
docs/: INSTALL.md  README_Graffiti.md  README_LLM.md  README_PIPELINE.md  README_RAG.md  README_orchestration.md  TURBULANCE_README.md  ai-systems.html  biomechanics.html  commands.md  config.js  index 2.html  index.html  pipeline.html  results.html  summary.md  tasks.md
docs/language/: moriarty-turbulance.md
docs/mechanics/: constituents-of-charge-dynamics.tex  derivation-of-musco-skeletal-system.tex
docs/philosophy/: semantic-causal-propagation.tex  semantic-uncertainty-propagation.tex  synchronised-agent-coordination.tex
examples/: sprint_analysis.tbn
publications/: prescribed-changes.md
publications/embedded-agent-mechanics/: propagation-mechanics-embedded-agent.aux  propagation-mechanics-embedded-agent.bbl  propagation-mechanics-embedded-agent.blg  propagation-mechanics-embedded-agent.fdb_latexmk  propagation-mechanics-embedded-agent.fls  propagation-mechanics-embedded-agent.out  propagation-mechanics-embedded-agent.tex  references.bib
publications/non-playing-character-physiology/: non-playing-character-physiology.aux  non-playing-character-physiology.bbl  non-playing-character-physiology.blg  non-playing-character-physiology.fdb_latexmk  non-playing-character-physiology.fls  non-playing-character-physiology.out  non-playing-character-physiology.tex  references.bib
publications/non-playing-character-purpose/: non-playing-character-purpose.aux  non-playing-character-purpose.bbl  non-playing-character-purpose.blg  non-playing-character-purpose.out  non-playing-character-purpose.tex  references.bib
scripts/: README.md  analyze_gifs.py  analyze_posture.py  fix_output_system.py  generate_visualizations.py  visualize_results.py
src/: __init__.py  core_integration.py  core_integrator.py  lib.rs  main.py  main.rs  moriarty_pipeline.py  pipeline.py  run_pipeline.py
src/api/: __init__.py  ai_models.py  analyze_video.py  api_service.py  client_example.py  pose_analysis_api.py  requirements_api.txt
src/cli/: commands.py  config.py  main.py  progress.py  status.py  utils.py
src/config/: __init__.py  config.md  setup_rag.py  (+2 more)
web/: .env.local.example  README.md  next.config.js  package-lock.json  package.json
(+104 files in other folders)
